k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: password-generator
  namespace: tomemming
  labels:
    app: password-generator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: password-generator
  template:
    metadata:
      labels:
        app: password-generator
    spec:
      containers:
        - name: password-generator
          image: ghcr.io/tinux-it/password:latest
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "0.5"
              memory: "128Mi"
            requests:
              cpu: "0.2"
              memory: "64Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
